<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:columnCount="1"
    android:stretchColumns="*"
    tools:context="com.hadassah.azrieli.lev_isha.core.MainMenuActivity">

    <TableRow
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/personal_profile_btn"
            style="@style/MainMenuButtonStyle"
            android:onClick="changeActivity"
            android:text="@string/personal_profile_label" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/personal_health_recommendation_btn"
            style="@style/MainMenuButtonStyle"
            android:onClick="personHealthRecommendations"
            android:text="@string/personal_health_recommendation_label" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/set_reminder_btn"
            style="@style/MainMenuButtonStyle"
            android:onClick="setupReminder"
            android:text="@string/set_reminder_label" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/checklist_btn"
            style="@style/MainMenuButtonStyle"
            android:onClick="changeActivity"
            android:text="@string/checklist_label" />
    </TableRow>


</TableLayout>

